# Team_project_1

./: Dockerfile  pyproject.toml  Диаграмма без названия.drawio
bithive_bot/src/: menu.py
bithive_bot/src/addressbook/: addressbook_class.py
bithive_bot/src/notebook/: classes.py  handler.py  note_book.txt
