[tool.poetry]
name = "team-proj"
version = "0.1.0"
description = ""
authors = ["Dmytro <777fesenko.d@gmail.com>"]
license = "LICENSE"
readme = "README.md"
packages = [{include = "team_proj"}]

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
email-validator = "^2.0.0.post2"
faker = "^19.2.0"
openai = "^0.27.8"
phonenumbers = "^8.13.17"
prettytable = "^3.8.0"
prompt-toolkit = "^3.0.39"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
